--- a/data_input/basic_structure_loader/yaml_patterns/Lecturer.yaml
+++ b/data_input/basic_structure_loader/yaml_patterns/Lecturer.yaml
@@ -9,6 +9,6 @@ AVAILABLE_TIMES: null # array (unavailable must be null) or null (unavailable mu
   - [[4], [11,30], [15,16]]
 
 PREFERRED_TIMES: # must be in available hours
-  - [[1,2], [10,30],[12,35], 3] # [[day1 (1-7), day2],[start_h, start_m],[end_h, end_m], points]
-  - [[3,4,5], [10,30],[12,35], 6]
-  - [null, null, 5] # for rest hours
+  - [[[1,2], [10,30],[12,35]], 3] # [[[day1 (1-7), day2],[start_h, start_m],[end_h, end_m]], points]
+  - [[[3,4,5], [10,30],[12,35]], 6]
+  - [[null] 5] # for rest hours
