before decizion to skip elective

--- a/old/data_input/basic_structure_loader/yaml_patterns/Room.yaml
+++ b/old/data_input/basic_structure_loader/yaml_patterns/Room.yaml
@@ -1,5 +1,6 @@
 TYPE: Room # Room, Lecturer, Group, Classes
 ID: 0 # int
+BUILDING_ID: 33
 NAME: "B5 - 105" # string
 CAPACITY: 30 # int
 AVAILABLE_TIMES: # array (unavailable must be null) or null (unavailable must be array)
