--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -1,9 +1,12 @@
 # Time Limits
 MAX_HOUR:
-  - HOUR: 8
-  - MINUTE: 0
+  HOUR: 23
+  MINUTE: 0
 
 MIN_HOUR:
-  - HOUR: 20
-  - MINUTE: 0
+  HOUR: 8
+  MINUTE: 0
+
+SAME_BUILDING_TIME: 10
+
 
